--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <tr>
       <td>
         <!-- In case of issue with the image alt text will be displayed instead -->
-        <img src="/images/heart.png" alt="3id picture" width="200" height="250"></img>
+        <img src="images/heart.png" alt="3id picture" width="200" height="250"></img>
 
 
       </td>
